Feat: Customer List done

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,7 +1,7 @@
 header.header {
   background: var(--blue);
   padding-top: 2rem;
-  
+
   > div {
     max-width: 1120px;
     margin: 0 auto;
@@ -11,5 +11,8 @@ header.header {
     display: flex;
     align-items: center;
     justify-content: center;
+  }
+  h1 {
+    color: var(--shapes);
   }
 }
