--- a/src/styles/CustomerList.scss
+++ b/src/styles/CustomerList.scss
@@ -1,121 +1,21 @@
-section.task-list {
+section.customer-list {
   background: var(--shapes);
   border-radius: 1rem;
-  
+
   margin-top: -10rem;
   padding: 70px 60px;
-  
+
   filter: drop-shadow(0px 24px 64px rgba(0, 0, 0, 0.06));
-  
+
   header {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    
+
     h2 {
       color: var(--text-title);
       font-size: 2.25rem;
     }
-
-
-  }
-
-  main {
-    margin-top: 3rem;
-
-    ul {
-      list-style: none;
-  
-      li {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        border-bottom: 1px solid #EBEBEB;
-        padding: 1rem 0;
-
-        div {
-          display: flex;
-          align-items: center;
-          gap: 14px;
-          outline: 0;
-
-          p {
-            font-size: 1rem;
-            color: var(--text);
-          }
-
-          &.completed {
-            p {
-              text-decoration:line-through;
-              opacity: 0.6;
-            }
-          }
-
-          .checkbox-container {
-            display: block;
-            position: relative;
-            padding-left: 14px;
-            margin-bottom: 18px;
-          
-            input {
-              position: absolute;
-              opacity: 0;
-              cursor: pointer;
-              height: 0;
-              width: 0;
-
-              &:checked {
-                & ~ .checkmark {
-                  background-color: var(--blue);
-                }
-
-                & ~ .checkmark:after {
-                  display: block;
-                }
-              } 
-            }
-          
-            .checkmark {
-              position: absolute;
-              top: 0;
-              left: 0;
-              width: 16px;
-              height: 16px;
-              background-color: var(--background);
-              border-radius: 2px;
-          
-              &:after {
-                content: "";
-                position: absolute;
-                display: none;
-                left: 6px;
-                top: 3px;
-                width: 3px;
-                height: 6px;
-                border: solid white;
-                border-width: 0 2px 2px 0;
-                transform: rotate(45deg);
-              }
-            }
-          }
-        }
-
-        button {
-          background: transparent;
-          border: 0;
-
-          svg {
-            color: var(--red);
-          }
-
-          &:hover {
-            svg {
-              filter: brightness(0.5)
-            }
-          }
-        }
-      }
-    } 
   }
 }
