--- a/src/styles/CustomerTable.scss
+++ b/src/styles/CustomerTable.scss
@@ -1,88 +1,52 @@
 $base-spacing-unit: 24px;
 $half-spacing-unit: $base-spacing-unit / 2;
 
-$color-alpha: #1772FF;
-$color-form-highlight: #EEEEEE;
+$color-alpha: #273fad;
+$color-form-highlight: #eeeeee;
 
-*, *:before, *:after {
-	box-sizing:border-box;
-}
-
-body {
-	padding:$base-spacing-unit;
-	font-family:'Source Sans Pro', sans-serif;
-	margin:0;
-}
-
-h1,h2,h3,h4,h5,h6 {
-	margin:0;
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
 }
 
 .container {
-	max-width: 1000px;
-	margin-right:auto;
-	margin-left:auto;
-	display:flex;
-	justify-content:center;
-	align-items:center;
-	min-height:100vh;
+  max-width: 1100px;
+
+  min-height: 100vh;
 }
 
 .table {
-	width:100%;
-	border:1px solid $color-form-highlight;
+  width: 100%;
+  border: 1px solid $color-form-highlight;
 }
 
 .table-header {
-	display:flex;
-	width:100%;
-	background:#000;
-	padding:($half-spacing-unit * 1.5) 0;
+  display: flex;
+  width: 100%;
+  background: #273fad;
+  padding: ($half-spacing-unit * 1.5) 0;
 }
 
 .table-row {
-	display:flex;
-	width:100%;
-	padding:($half-spacing-unit * 1.5) 0;
-	
-	&:nth-of-type(odd) {
-		background:$color-form-highlight;
-	}
+  display: flex;
+  width: 100%;
+  padding: ($half-spacing-unit * 1.5) 0;
+
+  &:nth-of-type(odd) {
+    background: $color-form-highlight;
+  }
 }
 
-.table-data, .header__item {
-	flex: 1 1 20%;
-	text-align:center;
+.table-data,
+.header__item {
+  flex: 1 1 20%;
+  text-align: center;
 }
 
 .header__item {
-	text-transform:uppercase;
+  text-transform: uppercase;
 }
-
-.filter__link {
-	color:white;
-	text-decoration: none;
-	position:relative;
-	display:inline-block;
-	padding-left:$base-spacing-unit;
-	padding-right:$base-spacing-unit;
-	
-	&::after {
-		content:'';
-		position:absolute;
-		right:-($half-spacing-unit * 1.5);
-		color:white;
-		font-size:$half-spacing-unit;
-		top: 50%;
-		transform: translateY(-50%);
-	}
-	
-	&.desc::after {
-		content: '(desc)';
-	}
-
-	&.asc::after {
-		content: '(asc)';
-	}
-	
+a {
+  color: rgb(255, 255, 255);
 }
